[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".idea", "tmp", "dist", ".tox", ".pytest_cache"]

[tool.flit.metadata]
module = "pytools"
author = "Boston Consulting Group (BCG)"
home-page = "https://github.com/BCG-Gamma/pytools"
description-file = "pypi_description.rst"
dist-name = "gamma-pytools"
license = "Apache Software License v2.0"

requires = [
    "pandas >= 0.24,<1.2",
    "numpy  >= 1.16,<1.20",
    "matplotlib >= 3.0,<3.4",
    "joblib >= 0.13,<1.17",
    "scipy  >= 1.2,<1.6",
    "typing_inspect >= 0.4",
    "pyyaml >= 5.0"
]

requires-python = ">=3.6,<4"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.requires-extra]
testing = [
    "pytest >= 5.2.*",
    "pytest-cov == 2.8.*",
    "flake8 == 3.8.*",
    "flake8-comprehensions == 3.2.*",
    "isort == 5.5.*",
]
docs = [
    "sphinx == 3.2.*",
    "sphinx-autodoc-typehints == 1.11.*",
    "pydata-sphinx-theme == 0.4.*",
    "nbsphinx == 0.7.*",
    "jupyter >= 1.0",
    "docutils",
    "xlrd == 1.2.*",
    "m2r == 0.2.*"
]

[tool.flit.metadata.urls]
Documentation = "https://bcg-gamma.github.io/pytools/"
Repository = "https://github.com/BCG-Gamma/pytools"

[build.matrix.min]
python      =  "=3.6.*"
pandas      =  "=0.24.*"
matplotlib  =  "=3.0.*"
numpy       =  "=1.16.*"
scipy       =  "=1.2.*"
joblib      =  "=0.13.*"

[build.matrix.max]
python      =  "=3.8.*"
pandas      =  "=1.1.*"
matplotlib  =  "=3.3.*"
numpy       =  "=1.19.*"
scipy       =  "=1.5.*"
joblib      =  "=0.16.*"

[build.matrix.unconstrained]
python      =  ">=3.6,<4"
pandas      =  ">=0.24"
matplotlib  =  ">=3.0"
numpy       =  ">=1.16"
scipy       =  ">=1.2"
joblib      =  ">=0.13"

[tool.black]
# quiet = "True"
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | data
    | docs
    | notebooks
    | sphinx
  )/
)
'''
