[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".idea", "tmp", "dist", ".tox", ".pytest_cache"]

[tool.flit.metadata]
module = "pytools"
author = "Boston Consulting Group (BCG)"
home-page = "https://github.com/BCG-Gamma/pytools"
description-file = "pypi_description.rst"
dist-name = "gamma-pytools"
license = "Apache Software License v2.0"

requires = [
    "joblib         >=0.14,<2a",
    "matplotlib     ~=3.0",
    "numpy          >=1.16,<2a",
    "pandas         >=0.24,<2a",
    "scipy          ~=1.2",
    "typing_inspect ~=0.4",
]

requires-python = ">=3.6,<4a"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.requires-extra]
testing = [
    "pytest ~= 5.2",
    "pytest-cov ~= 2.8",
    "flake8 ~= 3.8",
    "flake8-comprehensions ~= 3.2",
    "isort ~= 5.5",
]
docs = [
    "sphinx ~= 4.2",
    "sphinx-autodoc-typehints ~= 1.12",
    "pydata-sphinx-theme ~= 0.7",
    "jinja2 ~= 2.11",
    "nbsphinx ~= 0.7.1",
    "jupyter == 1",
    "docutils ~= 0.17",
    "xlrd ~= 1.2",
    "m2r ~= 0.2"
]

[tool.flit.metadata.urls]
Documentation = "https://bcg-gamma.github.io/pytools/"
Repository = "https://github.com/BCG-Gamma/pytools"

[build.matrix.min]
# minimum requirements of gamma-pytools
joblib         = "~=0.14.0"
matplotlib     = "~=3.0.3"
numpy          = ">=1.16.6,<1.17a"  # cannot use ~= due to conda bug
pandas         = "~=0.24.2"
python         = ">=3.6.8,<3.7a"  # cannot use ~= due to conda bug
scipy          = "~=1.2.1"
typing_inspect = "~=0.4.0"

[build.matrix.max]
joblib         = "~=1.0"
matplotlib     = "~=3.4"
numpy          = ">=1.20,<2a"  # cannot use ~= due to conda bug
pandas         = "~=1.2"
python         = ">=3.8,<4a"  # cannot use ~= due to conda bug
scipy          = "~=1.6"
typing_inspect = "~=0.7"

[tool.black]
# quiet = "True"
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | data
    | docs
    | notebooks
    | sphinx
  )/
)
'''
